# fficxx-example

./: .gitignore
mysample-generator/: build.sh
mysample-generator/example/: example.cabal  stack.yaml
mysample-generator/example/MySample/: MySample.cabal  MySample.json
mysample-generator/example/MySample/csrc/: MySampleA.cpp  MySampleB.cpp  MySampleB.h  test.cpp
mysample-generator/example/MySample/src/MySample/: A.hs
mysample-generator/example/MySample/src/MySample/A/: FFI.hsc  Implementation.hs
mysample-generator/example/MySample/src/MySample/B/: Cast.hs
mysample-generator/example/src/: Main.hs
mysample-generator/example/working/: MySample.A.Cast.hs  MySample.A.Interface.hs  MySample.A.RawType.hs  MySample.B.FFI.hsc  MySample.B.Implementation.hs  MySample.B.Interface.hs  MySample.B.RawType.hs  MySample.B.hs  MySample.hs  MySampleA.h  MySampleTopLevel.cpp  MySampleTopLevel.h  MySampleType.h  test.h
